@startuml Android Plugin Class Diagram
class BluetoothMeshPlugin {
    - meshController: MeshController
    - bleController: BleController
    - meshManagerApi: MeshManagerApi
}
class MeshController {
    - meshManagerApi: MeshManagerApi
}
class BleController {
    - deviceScanner: DeviceScanner
}
class MeshManagerApi
class DeviceScanner
class MeshCallbacksManager implements MeshManagerCallbacks, MeshProvisioningStatusCallbacks, MeshStatusCallbacks
class PluginCallsManager
class NotificationManager
class NodesOnlineStateManager

interface MeshManagerCallbacks
interface MeshProvisioningStatusCallbacks
interface MeshStatusCallbacks

BluetoothMeshPlugin --> MeshController: uses
BluetoothMeshPlugin --> BleController: uses
MeshController --> MeshManagerApi: manage mesh network
DeviceScanner o-- BleController: meshManagerApi
BleController --> DeviceScanner: uses
BleController o-- BluetoothMeshPlugin: meshManagerApi
MeshController o-- BluetoothMeshPlugin: meshManagerApi
MeshController *-- MeshCallbacksManager: meshManagerCallbacks
MeshManagerApi --> MeshCallbacksManager: set mesh callbacks
MeshCallbacksManager --> PluginCallsManager: resolve plugin call
BluetoothMeshPlugin --> PluginCallsManager: add plugin call
PluginCallsManager --> NotificationManager: send notification
DeviceScanner --> NotificationManager: send notification
MeshCallbacksManager --> NodesOnlineStateManager: add/remove node
BluetoothMeshPlugin --> NodesOnlineStateManager: start/stop monitoring
@enduml
